--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,8 @@
 
 
         }
-        h1{
+
+        h1 {
             color: darkseagreen;
         }
 
@@ -78,16 +79,19 @@
             overflow: scroll;
         }
 
-        .card{
-            margin:10px;
+        .card {
+            margin: 10px;
         }
-        h3{
+
+        h3 {
             color: darkseagreen;
             font-size: xx-large;
         }
-        h3:hover{
-            color:gray;
+
+        h3:hover {
+            color: gray;
         }
+
         h4 {
             text-align: center;
             display: block;
@@ -113,14 +117,92 @@
             });
         });
 
-        function showReview(){
-            window.open("review.html", "review", "width=400, height=200")
+
+        function showReview(reviewId, reviewListId) {
+            $('#' + reviewListId).empty()
+
+            $.ajax({
+                type: "POST",
+                url: "/reviews",
+                data: {
+                    'reviewId': reviewId,
+                },
+                success: function (response) {
+                    lists = response['reviewList']
+                    console.log(lists)
+                    for (let i = 0; i < lists.length; i++) {
+                        let list = lists[i]
+                        let content = list['content']
+                        let temp = `
+                        <li class="list-group-item">${content}</li>
+                        `
+
+                        $('#' + reviewListId).append(temp)
+
+                    }
+
+                }
+
+            })
+            if ($('#' + reviewId).css("display") == "flex") {
+                $('#' + reviewId).hide()
+            } else {
+                $('#' + reviewId).show()
+
+            }
+
+
         }
 
+        function postReview(reviewId, reviewBoxId) {
+            $('#' + reviewBoxId).empty()
+
+            let storyId = reviewId + 'story'
+            let temp =
+                `
+                <div class="reviewBox">
+                <label for="story">후기를 등록해보세요:</label>
+                <textarea id="${storyId}" name="story"
+                          rows="5" cols="33">
+                </textarea>
+                <button class="btn btn-outline-success my-2 my-sm-0" type='button' onclick="createReview('${reviewId}','${storyId}')">등록</button>
+                </div>
+                `
+            $('#' + reviewBoxId).prepend(temp)
+
+            if ($('#' + reviewBoxId).css('display') == 'block') {
+                $('#' + reviewBoxId).hide()
+
+            } else {
+                $('#' + reviewBoxId).show()
+
+
+            }
+
+        }
+
+        function createReview(reviewId, storyId) {
+            $.ajax({
+                type: "POST",
+                url: "/review",
+                data: {
+                    'reviewId': reviewId,
+                    'content': $('#' + storyId).val()
+                },
+                success: function (response) {
+                    $('#' + storyId).val('')
+                    $('.reviewBox').hide()
+                    $('#' + reviewId).hide()
+
+                }
+
+            })
+        }
 
         function showResult() {
             $('#nodata').show()
             $('#landresult').empty()
+
 
             let opt = $('#order-count').val()
             let keyword = $('#keyword').val()
@@ -132,92 +214,71 @@
                         'keyword': keyword
                     },
                     success: function (response) {
+                        let datas
                         let gus = response['gu']
                         let dongs = response['dong']
                         let names = response['name']
                         let mode = response['mode']
-
-                        if (mode == 0) {
-                            for (let i = 0; i < gus.length; i++) {
-                                let gu = gus[i]
-                                let address = gu['address']
-                                let name = gu['name']
-                                let tel = gu['tel']
-                                let status = gu['status']
-                                let temp = `
-                                <div class="card" >
-                                  <h3 class="card-header" onclick="showReview()">${name}</h3>
-                                  <div class="card-body">
-                                    <h5 class="card-title">${address}</h5>
-                                    <p class="card-text">${tel}</p>
-                                    <p class="card-text">${status}</p>
-
-                                  </div>
-                                </div>
-                                `
-                                $('#landresult').append(temp)
-                                if (temp != null)
-                                    $('#nodata').hide()
-
-                            }
-                            return
-                        } else if (mode == 1) {
-                            for (let i = 0; i < dongs.length; i++) {
-                                let dong = dongs[i]
-                                let address = dong['address']
-                                let name = dong['name']
-                                let tel = dong['tel']
-                                let status = dong['status']
-                                let temp = `
-                                <div class="card">
-                                  <h3 class="card-header" onclick="showReview()">${name}</h3>
-                                  <div class="card-body">
-                                    <h5 class="card-title">${address}</h5>
-                                    <p class="card-text">${tel}</p>
-                                    <p class="card-text">${status}</p>
-
-                                  </div>
-                                </div>
-                                `
-                                $('#landresult').append(temp)
-                                if (temp != null)
-                                    $('#nodata').hide()
-
-                            }
-                            return
-                        } else {
-                            for (let i = 0; i < names.length; i++) {
-                                let name = names[i]
-                                let address = name['address']
-                                let name2 = name['name']
-                                let tel = name['tel']
-                                let status = name['status']
-                                let temp = `
-                                <div class="card">
-                                  <h3 class="card-header" onclick="showReview()">${name2}</h3>
-                                  <div class="card-body">
-                                    <h5 class="card-title">${address}</h5>
-                                    <p class="card-text">${tel}</p>
-                                    <p class="card-text">${status}</p>
-
-                                  </div>
-                                </div>
-                                `
-                                $('#landresult').append(temp)
-                                if (temp != null)
-                                    $('#nodata').hide()
-
-                            }
-                            return
-
+                        if(mode==0){
+                            datas=gus
+                        }
+                        else if(mode==1){
+                            datas=dongs
+                        }
+                        else{
+                            datas=names
                         }
 
+                            for (let i = 0; i < datas.length; i++) {
+                                let data = datas[i]
+                                let uid = data['uid']
+                                let reviewId = 'review' + uid
+                                let reviewBoxId = 'reviewBox' + uid
+                                let reviewListId = 'reviewList' + uid
+                                let address = data['address']
+                                let name = data['name']
+                                let tel = data['tel']
+                                let status = data['status']
+                                let temp = `
+                                <div class="card" id="${uid}" >
+                                  <h3 class="card-header" onclick=" showReview('${reviewId}', '${reviewListId}')">${name}</h3>
+                                  <div class="card-body">
+                                    <h5 class="card-title">${address}</h5>
+                                    <p class="card-text">${tel}</p>
+                                    <p class="card-text">${status}</p>
+                                    </div>
+                                </div>
+                                `
+                                let temp2 = `
+                                  <div class="card" id="${reviewId}">
+                                  <div id="${reviewBoxId}"></div>
+                                  <div class="card-header">
+                                    ${name}에 달린 리뷰
+                                    <button class="btn btn-outline-success my-2 my-sm-0" type='button' onclick="postReview('${reviewId}','${reviewBoxId}')">댓글등록</button>
+
+                                  </div>
+                                  <div id="${reviewListId}">
+
+                                  </div>
+                                  </div>
+
+                                `
+                                $('#landresult').append(temp)
+                                $('#' + uid).append(temp2)
+                                $('#' + reviewId).hide()
+                                if (data != null)
+                                    $('#nodata').hide()
+
+                            }
+                            return
 
                     }
                 }
             )
 
         }
+
+
     </script>
 </head>
 <body>
